AdventOfCode2025 - Day 4